--- a/src/views/Navigation/Navigation.module.scss
+++ b/src/views/Navigation/Navigation.module.scss
@@ -1,14 +1,14 @@
 @import 'src/assets/globalStyleElements.module';
+
 .Navigation {
   .navigationLinks {
-padding: $globalHomeContentContainerPadding;
+    padding: $globalHomeContentContainerPadding;
     all: inherit;
     display: flex;
     position: absolute;
-    flex-direction: row;
     bottom: 0;
-    justify-content: start;
+    justify-content: space-evenly;
     align-items: center;
-    width: 100vw;
+    width: 100%;
   }
 }
